# CatDetector

./: pyproject.toml
src/cat_detector/: bisecting_kmeans.py  cluster_images.py  compress_model.py  config.py  label_clustering.py  nn_training.py  paths.py  prepare_model_for_uc.py
src/cat_detector/templates/: load_template.py  uc_model_template.jinja  uc_model_template_h.jinja
test/: test_bisecting_kmeans.py
