[tool.poetry]
name = "cat_detector"
version = "0.1.0"
description = ""
authors = ["skytosattod <davide.tosatto95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "4.*"
matplotlib = "3.*"
tensorflow = "2.1.1"
pyyaml = "5.*"
Jinja2 = "2.*"

[tool.poetry.dev-dependencies]
pytest = "6.*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
